--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-	background-color: coral;
+	background-color: #725FA5;
 	font-family: "Helvetica", "Verdana", sans-serif;
 	height: 100%;
 }
